feat: Add Digital Transformation Hero case study page with metadata and details
feat: Create Contact page with metadata for professional services inquiry

style: Update global CSS variables for border and color themes

fix: Refactor Navigation component styles for improved UI consistency

fix: Update BlogGrid, EventsGrid, FeaturedEvents, and other sections to use Next.js Image component for better performance

feat: Implement FloatingCard component with image support

style: Enhance Hero section styles for better visual appeal

refactor: Optimize PriceCalculator component with useCallback for performance

feat: Add TestimonialsGrid component with image support

feat: Create BlogPostDetail and EventDetail templates with image support

feat: Implement usePerformance hook for tracking performance metrics

feat: Add useTypewriter hook with memoization for improved performance

feat: Introduce centralized color management system in colors.ts

feat: Develop SEO utility functions for metadata generation and structured data

--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
     "analyze": "ANALYZE=true npm run build",
     "audit:performance": "node scripts/performance-audit.js",
     "build:production": "NODE_ENV=production npm run build",
-    "lighthouse": "lighthouse http://localhost:3000 --output=html --output-path=./lighthouse-report.html --chrome-flags='--headless'"
+    "lighthouse": "lighthouse http://localhost:3000 --output=html --output-path=./lighthouse-report.html --chrome-flags='--headless'",
+    "health-check": "node scripts/health-check.js",
+    "optimize": "node scripts/optimize.js",
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "build:analyze": "ANALYZE=true npm run build",
+    "test:lighthouse": "npm run build && npm start & sleep 5 && npm run lighthouse && kill %1",
+    "precommit": "npm run type-check && npm run lint && npm run format:check"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -32,12 +40,17 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@next/bundle-analyzer": "^15.3.4",
+    "@next/eslint-plugin-next": "^15.3.4",
     "@tailwindcss/postcss": "^4.1.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.34.1",
+    "@typescript-eslint/parser": "^8.34.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "postcss-import": "^16.1.1",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.1.10",
