feat: Enhance image handling and validation
- Added scripts for fixing runtime issues and validating images.
- Introduced SafeImage component for improved image loading with fallback.
- Created placeholder images and SVGs for various assets.
- Updated package.json with new scripts for runtime fixes and image validation.
- Implemented image validation utility to check for missing images in the project.
- Modified layout and components to utilize new image handling features.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "build:analyze": "ANALYZE=true npm run build",
     "test:lighthouse": "npm run build && npm start & sleep 5 && npm run lighthouse && kill %1",
-    "precommit": "npm run type-check && npm run lint && npm run format:check"
+    "precommit": "npm run type-check && npm run lint && npm run format:check",
+    "fix-runtime": "node scripts/fix-runtime-issues.js",
+    "validate-images": "node scripts/validate-images.js",
+    "dev:safe": "npm run fix-runtime && npm run dev",
+    "build:safe": "npm run fix-runtime && npm run build"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
