Add hydration error handling and improve performance monitoring
- Created a new documentation file `nextjsrules.md` detailing common hydration errors in Next.js and their solutions.
- Updated `package.json` and `package-lock.json` to include `eslint-plugin-react` for better linting support.
- Modified linting scripts to provide detailed reports and enforce stricter rules.
- Refactored various components to prevent hydration mismatches by ensuring consistent rendering between server and client.
- Implemented `suppressHydrationWarning` in specific components to handle known discrepancies.
- Enhanced performance monitoring by generating unique IDs for web vitals instead of using `Date.now()`.
- Updated CSS styles for a glass effect and ensured proper usage of Tailwind CSS classes.
- Improved accessibility and usability in navigation and service showcase components.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint . --max-warnings=0",
+    "lint:report": "eslint . -f html -o hydration-report.html",
+    "lint:hydration": "eslint . --max-warnings=0",
+    "lint:fix": "eslint . --fix",
     "analyze": "ANALYZE=true npm run build",
     "audit:performance": "node scripts/performance-audit.js",
     "build:production": "NODE_ENV=production npm run build",
@@ -54,6 +57,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "postcss-import": "^16.1.1",
     "prettier": "^3.5.3",
