feat: migrate to ES modules and add debugging support
refactor(scripts): convert require to import syntax
feat(debug): add VS Code launch configurations and debugging guide
fix(seo): support 'product' type in SEO config
refactor(colors): simplify getColorValue implementation
chore: remove unused lint and hydration fix files

--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "techflow-nextjs",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:debug": "NODE_OPTIONS='--inspect' next dev --turbopack",
+    "dev:debug-brk": "NODE_OPTIONS='--inspect-brk' next dev --turbopack",
     "build": "next build",
+    "build:debug": "NODE_OPTIONS='--inspect' next build",
+    "build:memory-debug": "next build --experimental-debug-memory-usage",
     "start": "next start",
+    "start:debug": "NODE_OPTIONS='--inspect' next start",
     "lint": "eslint . --max-warnings=0",
     "lint:report": "eslint . -f html -o hydration-report.html",
     "lint:hydration": "eslint . --max-warnings=0",
