feat(testing): add comprehensive testing setup with jest, accessibility checks, and CI workflow
Add complete testing infrastructure including:
- Jest configuration with TypeScript support
- Accessibility testing with axe-core and pa11y
- GitHub Actions workflow for quality checks
- Pre-commit hooks with lint-staged
- Example test files and documentation
- Mocking for Next.js components and browser APIs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,69 @@
                 "@modelcontextprotocol/server-puppeteer"
             ]
         }
-    }
+    },
+    "files.saveConflictResolution": "overwriteFileOnDisk",
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": "explicit",
+        "source.organizeImports": "explicit"
+    },
+    "eslint.validate": [
+        "javascript",
+        "javascriptreact",
+        "typescript",
+        "typescriptreact"
+    ],
+    "typescript.preferences.importModuleSpecifier": "relative",
+    "typescript.suggest.autoImports": true,
+    "typescript.updateImportsOnFileMove.enabled": "always",
+    "emmet.includeLanguages": {
+        "typescript": "html",
+        "typescriptreact": "html"
+    },
+    "files.associations": {
+        "*.css": "tailwindcss"
+    },
+    "tailwindCSS.includeLanguages": {
+        "typescript": "html",
+        "typescriptreact": "html"
+    },
+    "tailwindCSS.experimental.classRegex": [
+        ["cva\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"],
+        ["cx\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"],
+        ["cn\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
+    ],
+    "jest.jestCommandLine": "npm test --",
+    "jest.autoRun": {
+        "watch": false,
+        "onStartup": ["all-tests"]
+    },
+    "testing.automaticallyOpenPeekView": "never",
+    "html.validate.styles": false,
+    "css.validate": false,
+    "search.exclude": {
+        "**/node_modules": true,
+        "**/.next": true,
+        "**/coverage": true,
+        "**/dist": true,
+        "**/build": true
+    },
+    "files.watcherExclude": {
+        "**/.git/objects/**": true,
+        "**/.git/subtree-cache/**": true,
+        "**/node_modules/**": true,
+        "**/.next/**": true,
+        "**/coverage/**": true
+    },
+    "typescript.preferences.includePackageJsonAutoImports": "on",
+    "editor.rulers": [80, 120],
+    "editor.wordWrap": "bounded",
+    "editor.wordWrapColumn": 80,
+    "files.eol": "\n",
+    "files.insertFinalNewline": true,
+    "files.trimTrailingWhitespace": true,
+    "editor.tabSize": 2,
+    "editor.insertSpaces": true,
+    "editor.detectIndentation": false
 }
