--- a/package.json
+++ b/package.json
@@ -31,7 +31,21 @@
     "fix-runtime": "node scripts/fix-runtime-issues.js",
     "validate-images": "node scripts/validate-images.js",
     "dev:safe": "npm run fix-runtime && npm run dev",
-    "build:safe": "npm run fix-runtime && npm run build"
+    "build:safe": "npm run fix-runtime && npm run build",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:staged": "jest --findRelatedTests",
+    "test:a11y": "jest --testPathPatterns=a11y",
+    "test:ci": "jest --ci --coverage --watchAll=false",
+    "validate:html": "html-validate 'src/**/*.{tsx,jsx}'",
+    "validate:a11y": "pa11y http://localhost:3000",
+    "validate:all": "npm run validate:html && npm run test:a11y",
+    "debug:comprehensive": "npm run validate:all && npm run test:coverage && npm run lint",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged",
+    "quality:check": "npm run type-check && npm run lint && npm run test:ci",
+    "quality:fix": "npm run lint:fix && npm run format"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -51,20 +65,34 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.10.2",
+    "@axe-core/webdriverjs": "^4.10.2",
     "@eslint/eslintrc": "^3",
     "@next/bundle-analyzer": "^15.3.4",
     "@next/eslint-plugin-next": "^15.3.4",
     "@tailwindcss/postcss": "^4.1.10",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
+    "@types/jest-axe": "^3.5.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
+    "cypress-audit": "^1.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "html-validate": "^9.7.0",
+    "husky": "^9.0.11",
+    "jest": "^30.0.2",
+    "jest-axe": "^10.0.0",
+    "jest-environment-jsdom": "^30.0.2",
+    "lint-staged": "^15.2.10",
+    "pa11y": "^9.0.0",
     "postcss-import": "^16.1.1",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.1.10",
