Refactor code for improved readability and consistency
- Updated conditional returns to use braces for clarity in PriceCalculator, TestimonialsCarousel, TestimonialsStats, useForm, useNotification, usePerformance, useScrollAnimation, useTypewriter, and other components.
- Replaced empty string image sources with a default image in TestimonialsGrid, BlogPostDetail, and EventDetail components.
- Added a new utility for date formatting and hooks for formatted date and month name retrieval.
- Enhanced image validation utility to return null for invalid sources and updated related functions.
- Modified SEO configuration to remove 'product' type.
- Updated package.json script for better formatting.
- Excluded 'testing-setup' from tsconfig.json.
- Added comprehensive user rules for AI assistant operations.
- Improved error handling and logging in verify-workflows script.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,7 @@
     },
     "files.saveConflictResolution": "overwriteFileOnDisk",
     "editor.formatOnSave": true,
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint",
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": "explicit",
         "source.organizeImports": "explicit"
@@ -49,10 +49,7 @@
         ["cn\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
     ],
     "jest.jestCommandLine": "npm test --",
-    "jest.autoRun": {
-        "watch": false,
-        "onStartup": ["all-tests"]
-    },
+    "jest.runMode": "on-demand",
     "testing.automaticallyOpenPeekView": "never",
     "html.validate.styles": false,
     "css.validate": false,
@@ -79,5 +76,18 @@
     "files.trimTrailingWhitespace": true,
     "editor.tabSize": 2,
     "editor.insertSpaces": true,
-    "editor.detectIndentation": false
+    "editor.detectIndentation": false,
+    "terminal.integrated.defaultProfile.osx": "zsh",
+    "terminal.integrated.profiles.osx": {
+        "zsh": {
+            "path": "/bin/zsh",
+            "args": ["-l"]
+        },
+        "bash": {
+            "path": "/bin/bash",
+            "args": ["-l"]
+        }
+    },
+    "terminal.integrated.inheritEnv": true,
+    "terminal.integrated.shellIntegration.enabled": true
 }
