--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:memory-debug": "next build --experimental-debug-memory-usage",
     "start": "next start",
     "start:debug": "NODE_OPTIONS='--inspect' next start",
-    "lint": "eslint . --max-warnings=0",
+    "lint": "eslint . --max-warnings=10",
     "lint:report": "eslint . -f html -o hydration-report.html",
     "lint:hydration": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --fix",
@@ -73,6 +73,7 @@
     "@tailwindcss/postcss": "^4.1.10",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "@types/jest-axe": "^3.5.9",
     "@types/node": "^20",
