--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "Browser-use-claude-mcp"]
+  "exclude": ["node_modules", "Browser-use-claude-mcp", "testing-setup"]
 }
