--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-ssr-friendly": "^1.3.0",
     "html-validate": "^9.7.0",
     "husky": "^9.0.11",
     "jest": "^30.0.2",
