--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:staged": "jest --findRelatedTests",
+    "test:staged": "jest --bail --findRelatedTests --passWithNoTests",
     "test:a11y": "jest --testPathPatterns=a11y",
     "test:ci": "jest --ci --coverage --watchAll=false",
     "validate:html": "html-validate 'src/**/*.{tsx,jsx}'",
