--- a/package.json
+++ b/package.json
@@ -64,6 +64,10 @@
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67"
   },
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "devDependencies": {
     "@axe-core/react": "^4.10.2",
     "@axe-core/webdriverjs": "^4.10.2",
