feat: Add CodeGPT API key to VSCode settings and refactor Navigation component by removing unused services dropdown

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,5 +89,6 @@
         }
     },
     "terminal.integrated.inheritEnv": true,
-    "terminal.integrated.shellIntegration.enabled": true
+    "terminal.integrated.shellIntegration.enabled": true,
+    "CodeGPT.apiKey": "CodeGPT Plus Beta"
 }
